--- a/.github/workflows/weekly-multi-platform-build.yml
+++ b/.github/workflows/weekly-multi-platform-build.yml
@@ -25,6 +25,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        submodules: true          # Checkout submodules
+        fetch-depth: 0            # Ensure the full history is fetched
 
     - name: Install CMake on Linux
       if: runner.os == 'Linux'
