--- a/.github/workflows/weekly-multi-platform-build.yml
+++ b/.github/workflows/weekly-multi-platform-build.yml
@@ -29,9 +29,11 @@ jobs:
         submodules: true          # Checkout submodules
         fetch-depth: 0            # Ensure the full history is fetched
 
-    - name: Install CMake on Linux
+    - name: Install dependencies on Linux
       if: runner.os == 'Linux'
-      run: sudo apt-get install -y cmake
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libwayland-dev libxkbcommon-dev
 
     - name: Install CMake on Windows
       if: runner.os == 'Windows'
