--- a/.github/workflows/weekly-multi-platform-build.yml
+++ b/.github/workflows/weekly-multi-platform-build.yml
@@ -33,7 +33,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libwayland-dev libxkbcommon-dev
+        sudo apt-get install -y cmake libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libwayland-dev libxkbcommon-dev libgl1-mesa-dev xorg-dev
 
     - name: Install CMake on Windows
       if: runner.os == 'Windows'
